// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Content - Snapshots > matches snapshot for ContentCard with column layout 1`] = `
<div
  class="gap-0 p-6 md:p-12"
  data-testid="card"
>
  <div
    class="flex w-full gap-4 lg:items-start lg:gap-12 flex-col p-0"
    data-slot="card-content"
  >
    <div
      class="flex w-full max-w-xl min-w-0 flex-1 flex-col justify-start gap-4"
      data-slot="illustrated-card-content"
    >
      <div>
        Column layout content
      </div>
    </div>
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentCard with custom className 1`] = `
<div
  class="gap-0 p-6 md:p-12 custom-card"
  data-testid="card"
>
  <div
    class="flex w-full gap-4 lg:items-start lg:gap-12 flex-col lg:flex-row p-0"
    data-slot="card-content"
  >
    <div
      class="flex w-full max-w-xl min-w-0 flex-1 flex-col justify-start gap-4"
      data-slot="illustrated-card-content"
    >
      <div>
        Custom content
      </div>
    </div>
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentCard with default props 1`] = `
<div
  class="gap-0 p-6 md:p-12"
  data-testid="card"
>
  <div
    class="flex w-full gap-4 lg:items-start lg:gap-12 flex-col lg:flex-row p-0"
    data-slot="card-content"
  >
    <div
      class="flex w-full max-w-xl min-w-0 flex-1 flex-col justify-start gap-4"
      data-slot="illustrated-card-content"
    >
      <div>
        Test content
      </div>
    </div>
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentCard with image 1`] = `
<div
  class="gap-0 p-6 md:p-12"
  data-testid="card"
>
  <div
    class="flex w-full gap-4 lg:items-start lg:gap-12 flex-col lg:flex-row p-0"
    data-slot="card-content"
  >
    <div
      class="contents"
      data-slot="illustrated-card-visual"
    >
      <div
        class="hidden lg:flex"
        style="width: 200px; height: 200px;"
      >
        <img
          alt="Test image"
          class=""
          data-testid="content-image"
          height="200"
          src="/test.jpg"
          style="object-fit: contain;"
          width="200"
        />
      </div>
    </div>
    <div
      class="flex w-full max-w-xl min-w-0 flex-1 flex-col justify-start gap-4"
      data-slot="illustrated-card-content"
    >
      <div>
        Content with image
      </div>
    </div>
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentContainer with custom className 1`] = `
<div
  class="max-w-(--container-max-width) gap-6 custom-container"
  data-testid="container"
>
  <div>
    Custom class
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentContainer with default props 1`] = `
<div
  class="max-w-(--container-max-width) gap-6"
  data-testid="container"
>
  <div>
    Default container
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentContainer with large gap 1`] = `
<div
  class="max-w-(--container-max-width) gap-8"
  data-testid="container"
>
  <div>
    Large gap
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentContainer with small max width 1`] = `
<div
  class="max-w-[588px] gap-6"
  data-testid="container"
>
  <div>
    Small max width
  </div>
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentImage visible on mobile 1`] = `
<div
  class="flex"
  style="width: 100px; height: 100px;"
>
  <img
    alt="Test"
    class=""
    data-testid="content-image"
    height="100"
    src="/test.jpg"
    style="object-fit: contain;"
    width="100"
  />
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentImage with custom className 1`] = `
<div
  class="hidden lg:flex"
  style="width: 100px; height: 100px;"
>
  <img
    alt="Test"
    class="custom-image"
    data-testid="content-image"
    height="100"
    src="/test.jpg"
    style="object-fit: contain;"
    width="100"
  />
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentImage with custom container className 1`] = `
<div
  class="hidden lg:flex custom-container"
  style="width: 100px; height: 100px;"
>
  <img
    alt="Test"
    class=""
    data-testid="content-image"
    height="100"
    src="/test.jpg"
    style="object-fit: contain;"
    width="100"
  />
</div>
`;

exports[`Content - Snapshots > matches snapshot for ContentImage with default props 1`] = `
<div
  class="hidden lg:flex"
  style="width: 100px; height: 100px;"
>
  <img
    alt="Test"
    class=""
    data-testid="content-image"
    height="100"
    src="/test.jpg"
    style="object-fit: contain;"
    width="100"
  />
</div>
`;
